# JobAnalyzer

./: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  package-lock 2.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts  transfo_test
backend/airflow/dags/: 01_JOB_SCRAPING_dag.py  02_JOB_TRANSFO.py  03_JOB_LOAD.py  JOB_PIPELINE_dag.py  job_scraping_dag.py
backend/infrastructure/config/: settings.py
backend/infrastructure/database/: supabase.py
backend/models/: job_offer.py
backend/models/entities/: job_offer.py
backend/models/value_objects/: enums.py
backend/scraper/: __init__.py  main.py  test_list_scraping.py  test_mistral_analyzer.py  test_scraping.py  test_structure.py
backend/scraper/config/: __init__.py  settings.py
backend/scraper/core/: __init__.py  cache.py  enums.py  html_cleaner.py  job_analyzer.py  job_scraper.py  list_scraper.py  (+3 more)
docker/airflow/: Dockerfile
frontend/: .env.example  .env.local.example  .eslintignore  .eslintrc.json  .firebaserc  .gitignore  README.md  STANDARDS.md  debug  eslint.config.mjs  firebase.json  next.config.ts  package-lock.json  package.json  tailwind.config 2.js  tailwind.config.js  tailwind.config.ts  vite.config.ts
frontend/functions/: .env.example  ETL01_EXTRACT.py  ETL02_TRANSFO.py  ETL03_LOAD.py  debug.html  main.py  requirements.txt  test.sh
frontend/public/: .htaccess
frontend/src/: App.vue  main.ts  supabase.js
scripts/: clear_cache.sh  copy_logs.sh  docker_clean_and_rebuild.sh  logs.sh  run_dags.sh
(+84 files in other folders)
