[tool.poetry]
name = "jobanalyzer"
version = "0.1.0"
description = "Analyseur automatique d'offres d'emploi avec IA"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
loguru = "^0.7.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
aiohttp = "^3.9.1"
supabase = "^2.3.0"
openai = "^1.3.0"
tenacity = "^8.2.3"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 